[project]
authors = [{ name = "Abyteon", email = "bai.tn@icloud.com" }]
dependencies = []
name = "vhr_parser"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge", "pypi"]
platforms = ["osx-arm64", "win-64", "linux-64"]

[tool.hatch.build.targets.wheel]
packages = ["src/vhr_parser"]


[tool.pixi.pypi-dependencies]
vhr_parser = { path = ".", editable = true }
cantools = { path = "/Users/bai.tn/DevOps/vhr_parser/wheels/cantools-40.5.0-py3-none-any.whl" }

[tool.pixi.tasks]
notebook = "jupyter lab"    # --no-browser --port=8888 --ip=127.0.0.1"
main = "python -m src.main"

[tool.pixi.dependencies]
pandas = ">=2.3.1,<3"
python = "3.12.*"
pyarrow = ">=21.0.0,<22"
jupyterlab = ">=4.4.6,<5"
